kubernetes/internal/voyager-operator.yaml
%IF_LOADBALANCER_VOYAGER%
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    weblogic.resourceVersion: voyager-load-balancer-v1
    app: voyager
  name: voyager-operator
  namespace: voyager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voyager
  template:
    metadata:
      labels:
        app: voyager
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      serviceAccountName: voyager-operator
      imagePullSecrets: []
      containers:
      - name: voyager
        args:
        - run
        - --v=3
        - --rbac=true
        - --cloud-provider=
        - --cloud-config= # ie. /etc/kubernetes/azure.json for azure
        - --ingress-class=
        - --restrict-to-operator-namespace=false
        - --docker-registry=appscode
        - --haproxy-image-tag=1.7.10-6.0.0
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        image: appscode/voyager:6.0.0
        ports:
        - containerPort: 8443
        - containerPort: 56790
        - containerPort: 56791
        volumeMounts:
        - mountPath: /etc/kubernetes
          name: cloudconfig
          readOnly: true
        - mountPath: /var/serving-cert
          name: serving-cert
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
      volumes:
      - hostPath:
          path: /etc/kubernetes
        name: cloudconfig
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: voyager-apiserver-cert
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
---
# to be able to expose TSB inside the cluster
apiVersion: v1
kind: Service
metadata:
  name: voyager-operator
  namespace: voyager
  labels:
    weblogic.resourceVersion: voyager-load-balancer-v1
    app: voyager
spec:
  ports:
  - name: admission
    port: 443
    targetPort: 8443
  - name: ops
    port: 56790
    targetPort: 56790
  - name: acme
    port: 56791
    targetPort: 56791
  selector:
    app: voyager
